--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
              </div>
 
              <div class="art-piece">
-                <img src="Pic.6.PNG" alt="Featured Artwork 6">
+                <img src="pic.6.PNG" alt="Featured Artwork 6">
                 <div class="art-info">
                     <h3>Visual Arts</h3>
                     <p>cecily brown</p>
