--- a/Events.html
+++ b/Events.html
@@ -98,6 +98,9 @@
             <img src="Art.png" alt="Art Galleria Logo" class="logo">
         </div>
         <nav class="navbar">
+            <div class="logo-container">
+                <img src="Art.png" alt="Art Galleria Logo" class="logo">
+            </div>
             <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="About Us.html">About Us</a></li>
@@ -227,7 +230,6 @@
                closeModal();
            }
        }
-
        let currentDate = new Date(2025, 0, 13);
        generateCalendar(currentDate.getFullYear(), currentDate.getMonth());
 
@@ -240,6 +242,9 @@
            currentDate.setMonth(currentDate.getMonth() + 1);
            generateCalendar(currentDate.getFullYear(), currentDate.getMonth());
        });
+    document.querySelector('.hamburger').addEventListener('click', function() {
+        document.querySelector('.nav-list').classList.toggle('show');
+    });
     </script>
 </body>
 </html>
