--- a/Testimonials.html
+++ b/Testimonials.html
@@ -58,6 +58,9 @@
         <img src="Art.png" alt="Art Galleria Logo" class="logo">
     </div>
     <nav class="navbar">
+        <div class="logo-container">
+            <img src="Art.png" alt="Art Galleria Logo" class="logo">
+        </div>
         <ul class="nav-list">
             <li><a href="index.html">Home</a></li>
             <li><a href="About Us.html">About Us</a></li>
@@ -99,5 +102,12 @@
     <footer>
         <p>&copy; 2024 Art Galleria. All rights reserved.</p>
     </footer>
+    <script>
+        document.querySelector('.hamburger').addEventListener('click', function() {
+            document.querySelector('.nav-list').classList.toggle('show');
+        });
+    </script>
 </body>
 </html>
+
+
