--- a/shop.html
+++ b/shop.html
@@ -105,6 +105,9 @@
             <img src="Art.png" alt="Art Galleria Logo" class="logo">
         </div>
         <nav class="navbar">
+            <div class="logo-container">
+                <img src="Art.png" alt="Art Galleria Logo" class="logo">
+            </div>
             <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="About Us.html">About Us</a></li>
@@ -254,7 +257,9 @@
     </footer>
 
     <script>
-       
-    </script>
+    document.querySelector('.hamburger').addEventListener('click', function() {
+        document.querySelector('.nav-list').classList.toggle('show');
+    });
+</script>
 </body>
 </html>
