--- a/About Us.html
+++ b/About Us.html
@@ -88,7 +88,14 @@
             <li><a href="Shop.html">Shop</a></li>
         </ul>
     </nav>
-</header>
+<<header>
+    <div class="logo-container">
+        <img src="Art.png" alt="Art Galleria Logo" class="logo">
+    </div>
+    <nav class="navbar">
+        <div class="hamburger">&#9776;</div>
+        <ul class="nav-list">
+            <!-- Your navigation items -->
     <main class="content">
         <div class="about-content">
             <h1>About Art Galleria</h1>
