--- a/Contact Us.html
+++ b/Contact Us.html
@@ -93,7 +93,9 @@
         <img src="Art.png" alt="Art Galleria Logo" class="logo">
     </div>
     <nav class="navbar">
+        <div class="hamburger">&#9776;</div>
         <ul class="nav-list">
+            <!-- Your navigation items -->
             <li><a href="index.html">Home</a></li>
             <li><a href="About Us.html">About Us</a></li>
             <li><a href="Events.html">Events</a></li>
