--- a/About Us.html
+++ b/About Us.html
@@ -79,7 +79,9 @@
         <img src="Art.png" alt="Art Galleria Logo" class="logo">
     </div>
     <nav class="navbar">
+        <div class="hamburger">&#9776;</div>
         <ul class="nav-list">
+
             <li><a href="index.html">Home</a></li>
             <li><a href="About Us.html">About Us</a></li>
             <li><a href="Events.html">Events</a></li>
@@ -88,14 +90,7 @@
             <li><a href="Shop.html">Shop</a></li>
         </ul>
     </nav>
-<<header>
-    <div class="logo-container">
-        <img src="Art.png" alt="Art Galleria Logo" class="logo">
-    </div>
-    <nav class="navbar">
-        <div class="hamburger">&#9776;</div>
-        <ul class="nav-list">
-            <!-- Your navigation items -->
+</header>
     <main class="content">
         <div class="about-content">
             <h1>About Art Galleria</h1>
