--- a/Testimonials.html
+++ b/Testimonials.html
@@ -58,6 +58,9 @@
         <img src="Art.png" alt="Art Galleria Logo" class="logo">
     </div>
     <nav class="navbar">
+        <div class="hamburger">&#9776;</div>
+
+    <nav class="navbar">
         <ul class="nav-list">
             <li><a href="index.html">Home</a></li>
             <li><a href="About Us.html">About Us</a></li>
