--- a/Events.html
+++ b/Events.html
@@ -111,10 +111,12 @@
     <main class="content">
         <h1>Upcoming Events</h1>
         <div class="calendar">
-            <div class="calendar-header">
+            <div class="calendar-container">
+    <div class="calendar">
                 <button id="prevMonth">&lt; Previous</button>
                 <h2 id="currentMonth">December 2024</h2>
                 <button id="nextMonth">Next &gt;</button>
+            </div>
             </div>
             <table>
                 <thead>
