--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <li><a href="Events.html">Events</a></li>
             <li><a href="Contact Us.html">Contact Us</a></li>
             <li><a href="Testimonials.html">Testimonials</a></li>
-            <li><a href="Shop.html">Shop</a></li>
+            <li><a href="shop.html">Shop</a></li>
         </ul>
     </nav>
 </header>
