--- a/Events.html
+++ b/Events.html
@@ -98,7 +98,9 @@
         <img src="Art.png" alt="Art Galleria Logo" class="logo">
     </div>
     <nav class="navbar">
+        <div class="hamburger">&#9776;</div>
         <ul class="nav-list">
+
             <li><a href="index.html">Home</a></li>
             <li><a href="About Us.html">About Us</a></li>
             <li><a href="Events.html">Events</a></li>
