--- a/shop.html
+++ b/shop.html
@@ -78,21 +78,23 @@
     </style>
 </head>
 <body>
-    <header>
-        <div class="logo-container">
-            <img src="Art.png" alt="Art Galleria Logo" class="logo">
-        </div>
-        <nav class="navbar">
-            <ul class="nav-list">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="About Us.html">About Us</a></li>
-                <li><a href="Events.html">Events</a></li>
-                <li><a href="Contact Us.html">Contact Us</a></li>
-                <li><a href="Testimonials.html">Testimonials</a></li>
-                <li><a href="shop.html">Shop</a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+    <div class="logo-container">
+        <img src="Art.png" alt="Art Galleria Logo" class="logo">
+    </div>
+    <nav class="navbar">
+        <div class="hamburger">&#9776;</div>
+        <ul class="nav-list">
+
+            <li><a href="index.html">Home</a></li>
+            <li><a href="About Us.html">About Us</a></li>
+            <li><a href="Events.html">Events</a></li>
+            <li><a href="Contact Us.html">Contact Us</a></li>
+            <li><a href="Testimonials.html">Testimonials</a></li>
+            <li><a href="shop.html">Shop</a></li>
+        </ul>
+    </nav>
+</header>
     <main class="content">
         <div class="shop-content">
             <h1>Art Galleria Shop</h1>
