--- a/About Us.html
+++ b/About Us.html
@@ -6,6 +6,21 @@
     <title>About Us - Art Galleria</title>
     <link rel="stylesheet" href="styles.css">
     <style>
+        .content {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 40px 20px;
+}
+@media (max-width: 768px) {
+    .content {
+        padding: 20px;
+    }
+
+    h1 {
+        font-size: 2em;
+    }
+}
+
         body {
             font-family: 'Arial', sans-serif;
             line-height: 1.6;
@@ -73,24 +88,27 @@
         }
     </style>
 </head>
-<body>    
-<header>
-    <div class="logo-container">
-        <img src="Art.png" alt="Art Galleria Logo" class="logo">
-    </div>
-    <nav class="navbar">
-        <div class="hamburger">&#9776;</div>
-        <ul class="nav-list">
+<body>
+    
+    <header>
+        <nav class="navbar">
+            <div class="logo-container">
+                <img src="Art.png" alt="Art Galleria Logo" class="logo">
+            </div>
+        <nav class="navbar">
+            <div class="hamburger">&#9776;</div>
+            <ul class="nav-list">
+            <ul class="nav-list">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About Us.html">About Us</a></li>
+                <li><a href="Events.html">Events</a></li>
+                <li><a href="Contact Us.html">Contact Us</a></li>
+                <li><a href="Testimonials.html">Testimonials</a></li>
+                <li><a href="Shop.html">Shop</a></li>
+            </ul>
+        </nav>
+    </header>
 
-            <li><a href="index.html">Home</a></li>
-            <li><a href="About Us.html">About Us</a></li>
-            <li><a href="Events.html">Events</a></li>
-            <li><a href="Contact Us.html">Contact Us</a></li>
-            <li><a href="Testimonials.html">Testimonials</a></li>
-            <li><a href="shop.html">Shop</a></li>
-        </ul>
-    </nav>
-</header>
     <main class="content">
         <div class="about-content">
             <h1>About Art Galleria</h1>
@@ -148,7 +166,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Art Galleria. All rights reserved.</p>
+        <p>&copy; 2025 Art Galleria. All rights reserved.</p>
     </footer>
 
     <script>
@@ -160,9 +178,5 @@
    
     </script>
     
-</body>
-</html>
-
-    </footer>
 </body>
 </html>
