--- a/Contact Us.html
+++ b/Contact Us.html
@@ -7,6 +7,47 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
+
+
+
+  header {
+                    background-color: #060428;
+                    color: white;
+                    padding: 20px 0;
+                    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+                }
+                .logo-container {
+                    text-align: center;
+                }
+                .logo {
+                    max-width: 150px;
+                    height: auto;
+                }
+                .navbar {
+                    display: flex;
+                    justify-content: center;
+                    margin-top: 20px;
+                }
+                .nav-list {
+                    list-style: none;
+                    padding: 0;
+                    display: flex;
+                    gap: 20px;
+                }
+                .nav-list a {
+                    color: white;
+                    text-decoration: none;
+                    font-weight: bold;
+                    transition: color 0.3s ease;
+                }
+                .nav-list a:hover {
+                    color: #609ed4;
+                }
+                .content {
+                    max-width: 1200px;
+                    margin: 0 auto;
+                    padding: 40px 20px;
+                }
         .content {
     max-width: 1200px;
     margin: 0 auto;
