--- a/Testimonials.html
+++ b/Testimonials.html
@@ -6,6 +6,33 @@
     <title>Testimonials - Art Galleria</title>
     <link rel="stylesheet" href="styles.css">
     <style>
+body {
+    background-color: #e6f2ff; /* Light blue background */
+}
+
+.testimonials-content {
+    background-color: #f0f8ff; /* Slightly different light blue */
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    padding: 40px;
+}
+
+.testimonial {
+    background: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    margin-bottom: 30px;
+    border-left: 4px solid #060428;
+}
+
+.submit-testimonial {
+    background-color: #d6e8ff; /* A bit darker blue for contrast */
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 30px;
+}
+
 
   header {
                     background-color: #060428;
