--- a/About Us.html
+++ b/About Us.html
@@ -6,22 +6,22 @@
     <title>About Us - Art Galleria</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-.about-content {
-    background-color: #e6f2ff; /* Light blue background */
+about-content {
+    background-color: #e6f2ff; 
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0,0,0,0.1);
     padding: 40px;
 }
 
 .about-section {
-    background: #f0f8ff; /* Slightly different light blue for inner sections */
+    background: #f0f8ff; 
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0,0,0,0.1);
 }
 
 #opening-hours {
-    background-color: #d6e8ff; /* A bit darker blue for contrast */
+    background-color: #d6e8ff; 
     border-left: 4px solid #060428; 
     margin-top: 20px; 
 }
